rails_server/app/assets/stylesheets/teachers.css.scss
// Place all the styles related to the Teachers controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#assign {
  border: 0.063em solid #DDD;
  text-align: center;
  padding: 2em;
  margin-bottom: 2em;
}

@media only screen and (min-width: 64.063em) {
  #assign {
    margin-top: 101px;
  }
}

.assign {
  margin-bottom: 0em;
}

#search {
  border: 0.063em solid #DDD;
  text-align: center;
  height: 29.813em;
  overflow-y: hidden;
  padding: 2em;
}

.teacher-row {
  background-color: white;
  padding: 1em;
  border-radius: 0.313em;
  border: 0.063em solid #DDD;
}

.classroomTable {
  border-collapse: collapse;
  width: 100%;
  overflow-x: scroll;
  display: block;
  max-height: 50.65em;
  overflow-y: scroll;
}

.student-name {
  min-width: 12em;
  max-width: 12em;
}

.prof-score {
  text-align: center;
}

.table {
  // overflow-y: scroll;
}

th.header {
  background-image: image-url('bg.gif');
  cursor: pointer;
  font-weight: bold;
  background-repeat: no-repeat;
  background-position: center left;
  padding-left: 1.250em;
  border-right: .063em solid #dad9c7;
  margin-left: -.063em;
}

th.headerSortDown {
    background-image: image-url('desc.gif');
    background-color: #48a6cb;
}

th.headerSortUp {
    background-image: image-url('asc.gif');
    background-color: #48a6cb;
}

.notLateAssignment {
  // background-color: white;
}

.lateAssignment {
  background-color: #FCCCC5;
}

.poorPerformance {
  background-color: #FFCE80;
}

.goodPerformance {
  background-color: #DFFFBD;
}

.excellentPerformance {
  background-color: #C2FF82;
}

.example-enter {
  opacity: 0.01;
  transition: opacity .5s ease-in;
}

.example-enter.example-enter-active {
  opacity: 1;
}

.example-leave {
  opacity: 1;
  transition: opacity .5s ease-in;
}

.example-leave.example-leave-active {
  opacity: 0.01;
}

#teacherId {
  display: none;
}

.textCheckbox {
  text-align: center;
  padding-top: 1.250em;
}

.studentTable {
  width: 100%;
  margin-bottom: 1em;
  margin-top: -1.563em;
  overflow-y: scroll;
  display: block;
  height: 19em;
}

#tabs {
  // border: 1px solid #ddd;
}

.filterStruggling {
  font-size: 0.7em;
  margin-top: -0.5em;
}

